--- a/app/src/main/res/layout/fragment_auth2.xml
+++ b/app/src/main/res/layout/fragment_auth2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,7 +10,59 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.auth.Auth2Fragment">
+        tools:context=".ui.auth.Auth2Fragment"
+        tools:ignore="MissingClass">
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_back_button"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/enternumber"
+            style="@style/texts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/googlesans_medium"
+            android:text="Verify Phone Number"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:textAlignment="center"
+            app:layout_constraintStart_toEndOf="@+id/back_button"
+            app:layout_constraintBottom_toBottomOf="@+id/back_button"
+            app:layout_constraintTop_toTopOf="@+id/back_button" />
+
+        <TextView
+            android:id="@+id/info"
+            style="@style/texts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/googlesans_regular"
+            android:text="Code is sent to 08109945686"
+            android:textAlignment="center"
+            android:layout_marginTop="50dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/enternumber" />
+
+        <com.mukesh.OtpView
+            android:id="@+id/otp_view"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:itemBackground="@color/primaryColor"
+            android:textColor="@android:color/white"
+            app:OtpItemCount="6"
+            app:OtpLineColor="@color/colorPrimary"
+            app:OtpViewType="line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
