--- a/app/src/main/res/layout/fragment_phone_auth2.xml
+++ b/app/src/main/res/layout/fragment_phone_auth2.xml
@@ -10,8 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.auth.Auth2Fragment"
-        tools:ignore="MissingClass">
+        tools:context=".ui.auth.PhoneAuth2Fragment">
 
         <ImageView
             android:id="@+id/back_button"
@@ -57,9 +56,6 @@
             android:inputType="number"
             android:itemBackground="@color/primaryColor"
             android:textColor="@android:color/white"
-            app:OtpItemCount="6"
-            app:OtpLineColor="@color/colorPrimary"
-            app:OtpViewType="line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info" />
