--- a/app/src/main/res/layout/fragment_create_transaction.xml
+++ b/app/src/main/res/layout/fragment_create_transaction.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.adashi.escrow.ui.createtransaction.CreateTransactionViewModel" />
 
     </data>
 
@@ -110,33 +113,6 @@
                         android:textColor="@color/white" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/transaction_description_field"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/googlesans_regular"
-                    android:hint="@string/transaction_description"
-                    app:helperText="@string/transaction_title_helper_text"
-                    app:helperTextEnabled="true"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/transaction_title_field">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/transaction_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/googlesans_regular"
-                        android:inputType="textEmailAddress"
-                        android:padding="20dp"
-                        android:singleLine="false"
-                        android:textColor="@color/white" />
-                </com.google.android.material.textfield.TextInputLayout>
-
                 <!-- Buyers Details -->
 
                 <LinearLayout
@@ -167,7 +143,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_name"
+                        android:hint="@string/sellers_name"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +155,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="textEmailAddress"
+                            android:inputType="textPersonName"
                             android:padding="20dp"
                             android:singleLine="false"
                             android:textColor="@color/white" />
@@ -194,7 +170,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_email"
+                        android:hint="@string/sellers_email"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -221,7 +197,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_phonenumber"
+                        android:hint="@string/sellers_phonenumber"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -372,7 +348,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_name"
+                        android:hint="@string/product_name"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -384,7 +360,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="textEmailAddress"
+                            android:inputType="text"
                             android:padding="20dp"
                             android:singleLine="false"
                             android:textColor="@color/white" />
@@ -392,29 +368,29 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/Product_type_field"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
+                        android:hint="@string/product_type"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_email"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/buyer_name_field">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/Product_type"
+                            android:inputType="none"
                             android:layout_width="match_parent"
+                            selectProductType="@{viewModel.productTypeArrayAdapter}"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="textEmailAddress"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -426,7 +402,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_phonenumber"
+                        android:hint="@string/product_description"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -453,7 +429,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_phonenumber"
+                        android:hint="@string/product_quantity"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -465,7 +441,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="textMultiLine"
+                            android:inputType="number"
                             android:padding="20dp"
                             android:singleLine="false"
                             android:textColor="@color/white" />
@@ -473,29 +449,29 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/price_perunit_price_field"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/buyer_phonenumber"
+                        android:hint="@string/product_price_per_unit"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/buyer_email_field">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/price_perunit_price"
                             android:layout_width="match_parent"
+                            android:inputType="none"
+                            selectProductType="@{viewModel.whoPaysArrayAdapter}"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="textMultiLine"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="true" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -507,7 +483,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/transaction_price"
+                        android:hint="@string/product_Price"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -519,71 +495,71 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="textEmailAddress"
+                            android:inputType="number"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="true"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/who_is_paying_field"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="@string/transaction_price"
+                        android:hint="@string/who_is_paying"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/transaction_description_field">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/who_is_paying"
                             android:layout_width="match_parent"
+                            selectProductType="@{viewModel.whoPaysArrayAdapter}"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="number"
+                            android:inputType="none"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="true" />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/payment_method_field"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
-                        android:hint="Payment method"
+                        android:hint="@string/payment_method"
                         app:helperText="@string/transaction_title_helper_text"
                         app:helperTextEnabled="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/buyer_phone_field">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/payment_method"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            selectProductType="@{viewModel.paymentMethodArrayAdapter}"
                             android:fontFamily="@font/googlesans_regular"
-                            android:inputType="phone"
+                            android:inputType="none"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="true" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
                 <Button
                     android:id="@+id/login_button"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
                     android:fontFamily="@font/googlesans_medium"
                     app:layout_constraintTop_toBottomOf="@+id/password_field"
                     android:layout_width="match_parent"
