--- a/app/src/main/res/layout/fragment_create_transaction.xml
+++ b/app/src/main/res/layout/fragment_create_transaction.xml
@@ -110,8 +110,7 @@
                         android:fontFamily="@font/googlesans_regular"
                         android:inputType="textEmailAddress"
                         android:padding="20dp"
-                        android:singleLine="true"
-                        android:textColor="@color/white" />
+                        android:singleLine="true"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <!-- Buyers Details -->
@@ -159,8 +158,7 @@
                             android:fontFamily="@font/googlesans_regular"
                             android:inputType="textPersonName"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -187,8 +185,7 @@
                             android:fontFamily="@font/googlesans_regular"
                             android:inputType="textEmailAddress"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -215,8 +212,7 @@
                             android:fontFamily="@font/googlesans_regular"
                             android:inputType="phone"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
@@ -264,8 +260,7 @@
                                 android:fontFamily="@font/googlesans_regular"
                                 android:inputType="textEmailAddress"
                                 android:padding="20dp"
-                                android:singleLine="false"
-                                android:textColor="@color/white" />
+                                android:singleLine="false" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -293,8 +288,7 @@
                                 android:fontFamily="@font/googlesans_regular"
                                 android:inputType="textEmailAddress"
                                 android:padding="20dp"
-                                android:singleLine="false"
-                                android:textColor="@color/white" />
+                                android:singleLine="false" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -321,8 +315,7 @@
                                 android:fontFamily="@font/googlesans_regular"
                                 android:inputType="phone"
                                 android:padding="20dp"
-                                android:singleLine="false"
-                                android:textColor="@color/white" />
+                                android:singleLine="false" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
@@ -371,8 +364,7 @@
                             android:fontFamily="@font/googlesans_regular"
                             android:inputType="text"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -427,8 +419,7 @@
                             android:fontFamily="@font/googlesans_regular"
                             android:inputType="textMultiLine"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -455,8 +446,7 @@
                             android:fontFamily="@font/googlesans_regular"
                             android:inputType="number"
                             android:padding="20dp"
-                            android:singleLine="false"
-                            android:textColor="@color/white" />
+                            android:singleLine="false"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -544,17 +534,38 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
-                <Button
-                    android:id="@+id/login_button"
-                    android:layout_marginTop="20dp"
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/googlesans_medium"
-                    app:layout_constraintTop_toBottomOf="@+id/password_field"
                     android:layout_width="match_parent"
-                    style="@style/buttons"
-                    android:textAllCaps="false"
-                    android:text="Create Transaction"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+                    <com.github.ybq.android.spinkit.SpinKitView
+                        android:id="@+id/spin_kit"
+                        android:visibility="invisible"
+                        style="@style/SpinKitView.CubeGrid"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        app:SpinKit_Color="?attr/colorPrimary"
+                        app:layout_constraintBottom_toBottomOf="@+id/login_button"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/login_button"
+                        app:layout_constraintTop_toBottomOf="@+id/login_button"
+                        app:layout_constraintTop_toTopOf="@+id/login_button" />
+                    <Button
+                        android:id="@+id/login_button"
+                        android:layout_marginTop="20dp"
+                        android:onClick="@{()->viewModel.CreateNewTransaction()}"
+                        android:layout_marginBottom="20dp"
+                        android:fontFamily="@font/googlesans_medium"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="match_parent"
+                        style="@style/buttons"
+                        android:textAllCaps="false"
+                        android:text="Create Transaction"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
